--- a/index.html
+++ b/index.html
@@ -6,8 +6,46 @@
   <title>Game Puzzle</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
+    body {
+      position: relative;
+      min-height: 100vh;
+      background-color: #000; /* Tambahkan ini untuk menghindari flashing saat memuat gambar */
+    }
+  
+    body::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url('./assets/images/bground.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      filter: blur(2px) brightness(50%); /* Menambahkan efek blur pada gambar */
+      z-index: -1; /* Membawa elemen ini di belakang konten lainnya */
+    }
+    
+  
+    .btn {
+      @apply flex items-center justify-center px-6 py-3 rounded-lg shadow-lg transition-all duration-300;
+    }
+  
+    .btn:hover {
+      @apply bg-gray-200;
+    }
+  
+    .btn-icon {
+      @apply w-6 h-6 mr-2;
+    }
+  
     .corner-card {
       @apply bg-white text-black p-4 rounded-lg shadow-lg transform hover:scale-105 transition-transform duration-300 flex items-center justify-center;
+    }
+  
+    .corner-card svg {
+      @apply h-6 w-6;
     }
   </style>
 </head>
@@ -24,7 +62,7 @@
   <!-- Konten Utama -->
   <div class="w-full max-w-md p-4 text-center">
     <h1 class="text-4xl font-bold text-white mb-8">Game Puzzle</h1>
-    <a href="dashboard.html" class="corner-card mx-auto">
+    <a href="puzzle.html" class="corner-card mx-auto">
       <span class="bg-white p-5 w-70 rounded-full text-black text-xl font-bold">Mulai</span>
     </a>
   </div>
