--- a/dashboard.html
+++ b/dashboard.html
@@ -7,22 +7,50 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
+    body {
+      position: relative;
+      min-height: 100vh;
+      background-color: #000; /* Tambahkan ini untuk menghindari flashing saat memuat gambar */
+    }
+  
+    body::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url('./assets/images/bground.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      filter: blur(2px) brightness(70%); /* Menambahkan efek blur pada gambar */
+      z-index: -1; /* Membawa elemen ini di belakang konten lainnya */
+    }
+    
+  
     .btn {
       @apply flex items-center justify-center px-6 py-3 rounded-lg shadow-lg transition-all duration-300;
     }
+  
     .btn:hover {
       @apply bg-gray-200;
     }
+  
     .btn-icon {
       @apply w-6 h-6 mr-2;
     }
+  
     .corner-card {
       @apply bg-white text-black p-4 rounded-lg shadow-lg transform hover:scale-105 transition-transform duration-300 flex items-center justify-center;
     }
+  
     .corner-card svg {
       @apply h-6 w-6;
     }
   </style>
+  
+  
 </head>
 <body class="bg-blue-600 text-white min-h-screen flex flex-col items-center justify-center relative">
   
@@ -33,10 +61,10 @@
 
   <!-- Konten Utama -->
   <div class="w-full max-w-md p-4">
-    <h1 class="text-4xl font-bold text-center mb-8">Selamat Datang di Game Puzzle</h1>
+    <h1 class="text-4xl font-bold text-center mb-8">Selamat Datang di Media Pembelajaran Rumah Adat</h1>
     <div class="flex flex-col gap-6 mb-8">
       <!-- Card 1 -->
-      <a href="puzzle.html" class="bg-white rounded-full shadow-lg text-black flex items-center justify-center transform hover:scale-105 transition-transform duration-300 p-6" data-aos="fade-up">
+      <a href="index.html" class="bg-white rounded-full shadow-lg text-black flex items-center justify-center transform hover:scale-105 transition-transform duration-300 p-6" data-aos="fade-up">
         
         <h2 class="text-xl font-bold">Play Game</h2>
       </a>
