--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <h1 class="text-4xl font-bold text-center mb-8">Selamat Datang di Media Pembelajaran Rumah Adat</h1>
     <div class="flex flex-col gap-6 mb-8">
       <!-- Card 1 -->
-      <a href="index.html" class="bg-white rounded-full shadow-lg text-black flex items-center justify-center transform hover:scale-105 transition-transform duration-300 p-6" data-aos="fade-up">
+      <a href="dashboard.html" class="bg-white rounded-full shadow-lg text-black flex items-center justify-center transform hover:scale-105 transition-transform duration-300 p-6" data-aos="fade-up">
         
         <h2 class="text-xl font-bold">Play Game</h2>
       </a>
