--- a/tentang.html
+++ b/tentang.html
@@ -113,7 +113,7 @@
     </div>
 
     <div class="navbar">
-        <a href="dashboard.html">
+        <a href="index.html">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7m-9 9v-8a2 2 0 012-2h4a2 2 0 012 2v8m-6-6h.01" />
             </svg>
