--- a/dashboard.html
+++ b/dashboard.html
@@ -1,71 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Game Puzzle</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <style>
-    body {
-      position: relative;
-      min-height: 100vh;
-      background-color: #000; /* Tambahkan ini untuk menghindari flashing saat memuat gambar */
-    }
-  
-    body::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: url('./assets/images/bground.jpg');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      filter: blur(2px) brightness(50%); /* Menambahkan efek blur pada gambar */
-      z-index: -1; /* Membawa elemen ini di belakang konten lainnya */
-    }
-    
-  
-    .btn {
-      @apply flex items-center justify-center px-6 py-3 rounded-lg shadow-lg transition-all duration-300;
-    }
-  
-    .btn:hover {
-      @apply bg-gray-200;
-    }
-  
-    .btn-icon {
-      @apply w-6 h-6 mr-2;
-    }
-  
-    .corner-card {
-      @apply bg-white text-black p-4 rounded-lg shadow-lg transform hover:scale-105 transition-transform duration-300 flex items-center justify-center;
-    }
-  
-    .corner-card svg {
-      @apply h-6 w-6;
-    }
-  </style>
-</head>
-<body class="bg-blue-600 text-white min-h-screen flex flex-col items-center justify-center relative">
-  
-  <!-- Card Logo di pojok kanan atas -->
-  <a href="tentang.html" class="corner-card absolute top-4 right-4">
-    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-      <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v18M3 12h18M12 3l6 6M12 3l-6 6M12 21l6-6M12 21l-6-6" />
-    </svg>
-    <span class="ml-2 text-sm font-bold">Tentang</span>
-  </a>
-
-  <!-- Konten Utama -->
-  <div class="w-full max-w-md p-4 text-center">
-    <h1 class="text-4xl font-bold text-white mb-8">Game Puzzle</h1>
-    <a href="puzzle.html" class="corner-card mx-auto">
-      <span class="bg-white p-5 w-70 rounded-full text-black text-xl font-bold">Mulai</span>
-    </a>
-  </div>
-
-</body>
-</html>
+<script>
+  window.location.href = "index.html";
+</script>
