--- a/cara-bermain.html
+++ b/cara-bermain.html
@@ -108,6 +108,18 @@
       width: 24px;
       height: 24px;
     }
+    .back-btn {
+      position: fixed;
+      left: 1rem;
+      bottom: 1rem;
+      background-color: #2b6cb0;
+      color: white;
+      padding: 0.75rem 1.5rem;
+      border-radius: 0.5rem;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+    }
   </style>
 </head>
 <body class="animate__animated animate__fadeIn">
@@ -227,20 +239,7 @@
     <div id="result" class="result hidden mt-8 animate__animated animate__fadeInUp"></div>
   </div>
 
-  <div class="navbar">
-    <a href="dashboard.html">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7m-9 9v-8a2 2 0 012-2h4a2 2 0 012 2v8m-6-6h.01" />
-        </svg>
-        Home
-    </a>
-    <a href="#back">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
-        </svg>
-        Back
-    </a>
-</div>
+  <a href="index.html" class="back-btn">Back</a>
   <script>
     let currentQuestion = 1;
     const totalQuestions = 10;
